src/components/Sidebar.css
.Sidebar {
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  background-color: #242F36;
  padding: 2rem;
  padding-right: 0;
}

.personal {
  width: 75%;
}

.site-nav {
  width: 100%;
  display: flex;
  justify-content: center;
}

.site-nav ul {
  display: flex;
  column-gap: 1rem;
}

img {
  width: 20%;
  border-radius: 50%;
}

.Sidebar a {
  color: inherit;  
  text-decoration: none;
  fill: inherit;
}

.Sidebar a:hover {
  font-weight: bold;
  font-size: 1.1rem;
  color: white;
  fill: white;
}

.sidebar-nav-socials {
  display: none;
}

@media (min-width: 768px) { 

  .Sidebar {
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 16rem;
    height: auto;
    text-align: left;
    padding: 2rem;
  }

  img {
    width: 100%;
    border-radius: 50%;
    object-fit: contain;
  }

  .sidebar-nav-socials {
    display: block;
  }
}

svg {
  width: 20px;
  height: 20px;
  fill: inherit;
}

